# ipafetch

./: LICENSE  README.md  ipafetch.rb  pyproject.toml  setup.py
ipafetch/: __init__.py  ipafetch.py
ipafetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
