[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipafetch"
version = "0.1.0"
description = "A tool to fetch IPA files from Apple Configurator"
readme = "README.md"
authors = [{name = "Andrew Garcia"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/drewg233/ipafetch"
"Bug Tracker" = "https://github.com/drewg233/ipafetch/issues" 